backend/notification-service/notification-service-templates-db/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-db
  namespace: dsa-re-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service-db
  template:
    metadata:
      labels:
        app: notification-service-db
    spec:
      securityContext:
        fsGroup: 999
      containers:
      - name: postgres
        image: quay.io/ukhomeofficedigital/dsa-re-notification-service-db
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pgdata
        securityContext:
          runAsUser: 999
          runAsGroup: 999
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: postgres-pvc
